[tool.poetry]
name = "anac"
version = "0.1.2"
description = "Async NetBox API Client"
license = "Apache-2.0"
readme = "README.md"
keywords = ["netbox", "api"]
repository = "https://github.com/timeforplanb123/anac"
documentation = "https://timeforplanb123.github.io/anac/"
authors = ["Pavel Shemetov <pshemetov123@gmail.com>"]
classifiers = [
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-mock = "^3.7"
pytest-asyncio = "^0.18"
coverage = {extras = ["toml"], version = "^6.3.3"}
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
mypy = "^0.950"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["anac"]

[tool.coverage.run]
branch = true
source = ["anac"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
